--- a/src/index.css
+++ b/src/index.css
@@ -3415,3 +3415,9 @@ html {
     transform: translate3d(var(--tw-exit-translate-x, 0), var(--tw-exit-translate-y, 0), 0) scale3d(var(--tw-exit-scale, 1), var(--tw-exit-scale, 1), var(--tw-exit-scale, 1)) rotate(var(--tw-exit-rotate, 0));
   }
 }
+
+
+#ecobot-container {
+  position: fixed !important;
+  z-index: 999999 !important;
+}
